# ctx

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.context/: cli-help-surface.md  contextignore-security-boundary.md  document-lifecycle.md  guidance-command.md  list-output-format.md  multi-concern-assembly.md  phase-8-implementation.md  planned-improvements.md  read-and-validation.md  supersession-judgment.md  workflow-scope.md
src/: cli.rs  document.rs  git.rs  id.rs  ignore.rs  index.rs  main.rs  output.rs  registry.rs
src/commands/: append.rs  assemble.rs  check.rs  gc.rs  guidance.rs  index.rs  init.rs  list.rs  mod.rs  new.rs  suggest.rs  supersede.rs  sync.rs
